--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@storyblok/storyblok-editable": "^1.1.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -16,8 +17,15 @@
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
+    "autoprefixer": "^10.4.4",
+    "axios": "^0.21.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.12",
+    "prettier": "2.6.1",
+    "storyblok-js-client": "^4.3.1",
+    "storyblok-react": "^0.1.2",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   }
 }
